# ucas

./: .dippy  .gitignore  AGENTS.md  BRAINSTORM.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  README.md  TODO-RUN-DOCKER.md  TODO.md  pyproject.toml  run_tests.sh  tender-napping-meerkat.md  test_mail.sh  test_script.sh  ucas-bin  ucas.yaml
.claude/skills/: tmux-automation
.pi/diary/: 2026-02-03-16-30-refactor-merge.md  2026-02-03-19-51-UCAS-FIX.md  2026-02-03-21-55-ucas-skills-update.md  2026-02-08-02-25-ucas-mail-dev.md  2026-02-08-14-15-ucas-mail-finalization.md
.ucas/: ucas-override.yaml  ucas.yaml
agents/acli-echo/: ucas.yaml
agents/acli-echo-lenient/: ucas.yaml
agents/basic-chat/: ucas.yaml
agents/git-mod/: PROMPT.md
docs/: BRAINSTORM.md  GROK_DISCUSION.md  GROK_X_DISCUSION.md  IMPLEMENTATION_SUMMARY.md  UCAS_ALTERNATIVES_ANALYSIS.md
docs/alternatives/: ADL CLI.md  Agent-CLI.md  Ansible.md  AutoGen.md  CLI Agent Orchestrator.md  CrewAI.md  Deep Agents CLI.md  Devbox.md  Kestra.md  Kimi CLI.md  Kiro CLI.md  LangGraph.md  Nika.md  Qodo Gen CLI.md  SuperAGI.md  Task.md  cagent.md  devenv.sh.md  make.md
mods/acli-claude/: ucas.yaml
tests/: test_dry_run.py  test_list_commands.py  test_mail.py  test_mail_hostname.py  test_mail_system.py  test_merger_strategies.py  test_mod_paths.py  test_project_root.py  test_run_mods.py
ucas/: __init__.py  __main__.py  cli.py  doctor.py  exceptions.py  installer.py  launcher.py  mail.py  mail_gui.py  mail_instruction.md  merger.py  project.py  resolver.py  settings.py  status_gui.py  team.py  yaml_parser.py
(+58 files in other folders)
